--- a/src/styles/modules/global_header.module.css
+++ b/src/styles/modules/global_header.module.css
@@ -2,6 +2,8 @@
 
 @value font-size-16, line-height-16, letter-spacing-16, font-size-18,line-height-18,letter-spacing-18 from '../constants/typography.css';
 
+@value snb-level from '../constants/z-index.css';
+
 .globalHeader {
   position: relative;
   display: flex;
@@ -9,6 +11,7 @@
   justify-content: flex-start;
   height: 50px;
   background-color: white;
+  z-index: snb-level;
 }
 
 .snbLeft {
@@ -36,6 +39,11 @@
 
 .logo a {
   display: inline-block;
+}
+
+.logo img {
+  width: 100%;
+  height: 32px;
 }
 
 @media screen and (min-width: 768px) {
