--- a/src/styles/bases/global.css
+++ b/src/styles/bases/global.css
@@ -10,6 +10,11 @@
   border: 0 !important;
 }
 
+.wrapper {
+  padding: 24px 0;
+  height: 100vh;
+}
+
 @media screen and (min-width: 768px) {
   .sm-only {
     display: none !important;
