--- a/src/styles/modules/global_header.module.css
+++ b/src/styles/modules/global_header.module.css
@@ -50,8 +50,8 @@
   .globalHeader {
     flex-direction: column;
     align-items: flex-start;
-    height: 100vh;
-    padding: 24px 14px;
+    height: 100%;
+    padding: 0 14px;
   }
 
   .logo {
@@ -97,8 +97,8 @@
 
   .loginBtn {
     position: absolute;
+    bottom: 0;
     left: 0;
-    bottom: 24px;
     width: 100%;
     height: 60px;
     font-size: font-size-18;
