--- a/src/styles/modules/search_page.module.css
+++ b/src/styles/modules/search_page.module.css
@@ -12,7 +12,7 @@
   transform: none;
 }
 
-article {
+.article {
   padding: 24px;
   height: 100%;
   background-color: background;
@@ -20,6 +20,6 @@ article {
   overflow-y: auto;
 }
 
-::-webkit-scrollbar {
+.article::-webkit-scrollbar {
   display: none !important;
 }
