--- a/src/styles/modules/buttons.module.css
+++ b/src/styles/modules/buttons.module.css
@@ -1,4 +1,4 @@
-@value white, green, green-active from '../constants/color.css';
+@value primary, secondery, white, green, green-active from '../constants/color.css';
 
 .baseBtn {
   display: flex;
@@ -23,4 +23,14 @@
 
 .primaryBtn:not(:disabled):hover {
   background-color: green-active;
+}
+
+.ghostBtn {
+  color: primary;
+  background-color: transparent;
+  transition: color 300ms ease-in-out;
+}
+
+.ghostBtn:not(:disabled):hover {
+  color: secondery;
 }
