--- a/src/styles/modules/error_page.module.css
+++ b/src/styles/modules/error_page.module.css
@@ -2,7 +2,7 @@
 
 @value font-size-14, line-height-14, letter-spacing-14, font-size-16, line-height-16, letter-spacing-16, font-size-18,line-height-18,letter-spacing-18 from '../constants/typography.css';
 
-.notFound {
+.error {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,13 +10,13 @@
   height: 100%;
 }
 
-.notFoundImg {
+.errorImg {
   margin-bottom: 24px;
   width: 60%;
   height: auto;
 }
 
-.notFoundTitle {
+.errorTitle {
   margin-bottom: 8px;
   font-size: font-size-18;
   line-height: line-height-18;
@@ -24,7 +24,7 @@
   color: primary;
 }
 
-.notFoundDesc {
+.errorDesc {
   font-size: font-size-14;
   line-height: line-height-14;
   letter-spacing: letter-spacing-14;
@@ -32,7 +32,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .notFoundDesc {
+  .errorDesc {
     font-size: font-size-16;
     line-height: line-height-16;
     letter-spacing: letter-spacing-16;
