--- a/src/styles/modules/common.module.css
+++ b/src/styles/modules/common.module.css
@@ -1,4 +1,4 @@
-@value overlay-black, primary, secondery, white, background,  green, green-active, state-red  from '../constants/color.css';
+@value overlay-black, primary, secondery, white, logout, background,  green, green-active  from '../constants/color.css';
 @value overlay-level, auth-popup-level from '../constants/z-index.css';
 
 @value font-size-14,line-height-14,letter-spacing-14, font-size-16,line-height-16,letter-spacing-16, font-size-24, line-height-24, letter-spacing-24 from '../constants/typography.css';
@@ -140,9 +140,8 @@
 
 .myMenu.isActive .myMenuList {
   max-height: 168px;
-  padding: 8px 0;
+  padding: 8px;
   opacity: 1;
-
   pointer-events: all;
 }
 
@@ -168,22 +167,22 @@
   box-shadow: dropdown-shadow;
 }
 
-.logout:hover,
-.logout:active {
-  color: state-red;
+.logoutBtn:hover,
+.logoutBtn:active {
+  color: logout;
 }
 
 .toolIcon {
   margin-right: 12px;
 }
 
-.logoutBtn {
+.mymemuBtn {
   width: 100%;
   height: 60px;
   border-radius: 4px;
   transition: box-shadow 300ms ease-in-out;
 }
 
-.logoutBtn:hover {
+.mymemuBtn:hover {
   box-shadow: dropdown-shadow;
 }
