--- a/src/styles/modules/member_card.module.css
+++ b/src/styles/modules/member_card.module.css
@@ -1,8 +1,10 @@
-@value primary, secondery, white, green, yellow, background, login, login-border from '../constants/color.css';
+@value primary, secondery, white, background, yellow, blue, login, login-border from '../constants/color.css';
 
-@value font-size-12, line-height-12, letter-spacing-12, font-size-14,line-height-14, letter-spacing-14, font-size-18, line-height-18,letter-spacing-18 from '../constants/typography.css';
+@value font-size-14,line-height-14, letter-spacing-14, font-size-18, line-height-18,letter-spacing-18 from '../constants/typography.css';
 
-.temp {
+@value popup-shadow from '../constants/box-shadow.css';
+
+.memberListWrap {
   position: relative;
   height: 100%;
   overflow-y: auto;
@@ -14,9 +16,10 @@
   align-items: flex-start;
   justify-content: center;
   width: 100%;
+  border-radius: 22px;
 }
 
-.temp::-webkit-scrollbar {
+.memberListWrap::-webkit-scrollbar {
   display: none !important;
 }
 
@@ -29,10 +32,15 @@
 .card {
   display: flex;
   flex-direction: column;
+  margin-right: 8px;
   padding: 22px;
   background-color: white;
-  border: 1px solid #d6d6d6;
   border-radius: 22px;
+  transition: box-shadow 300ms ease-in-out;
+}
+
+.card:active {
+  box-shadow: popup-shadow;
 }
 
 .cardHeader {
@@ -44,8 +52,8 @@
 
 .dot {
   margin-right: 8px;
-  width: 12px;
-  height: 12px;
+  width: 14px;
+  height: 14px;
   background-color: login;
   border: 2px solid login-border;
   border-radius: 50%;
@@ -62,7 +70,18 @@
   position: relative;
   margin: 0 -22px;
   padding: 64px 22px 22px;
+}
+
+.cardContents.isGray {
+  background-color: background;
+}
+
+.cardContents.isYellow {
   background-color: yellow;
+}
+
+.cardContents.isBlue {
+  background-color: blue;
 }
 
 .profile {
@@ -78,6 +97,7 @@
 .profile img {
   width: 100%;
   height: auto;
+  border-radius: 20px;
 }
 
 .authName {
@@ -126,6 +146,11 @@
 @media screen and (min-width: 768px) {
   .memberList {
     justify-content: space-between;
+    padding: 10px;
+  }
+
+  .card:hover {
+    box-shadow: popup-shadow;
   }
 
   .meberItem {
