--- a/src/styles/constants/box-shadow.css
+++ b/src/styles/constants/box-shadow.css
@@ -1,3 +1,4 @@
 @value dropdown-shadow: 0 4px 6px rgba(0, 0, 0, 0.18);
+@value card-shadow: 0px 4px 12px rgba(67, 67, 67, 0.1);
 @value popup-shadow: 0 4px 20px rgba(63, 65, 80, 0.3);
 @value popup-reversed-shadow: 0 -4px 20px rgba(63, 65, 80, 0.3);
