--- a/src/styles/modules/common.module.css
+++ b/src/styles/modules/common.module.css
@@ -181,6 +181,14 @@
   height: 60px;
   border-radius: 4px;
   transition: box-shadow 300ms ease-in-out;
+  color: secondery;
+}
+
+.userIcon {
+  margin-right: 8px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 }
 
 .mymemuBtn:hover {
