--- a/src/styles/modules/dropdown.module.css
+++ b/src/styles/modules/dropdown.module.css
@@ -2,6 +2,8 @@
 
 @value font-size-14,line-height-14, letter-spacing-14 from '../constants/typography.css';
 
+@value teams-count, ranks-count, theme-count, dropdown-height, dropdown-padding from '../constants/dropdownList.css';
+
 .dropdownList {
   padding: 8px;
   width: 100%;
@@ -23,4 +25,50 @@
 .listBtn:hover {
   background-color: background;
   color: primary;
+}
+
+.dropdownIcon {
+  position: absolute;
+  top: 6px;
+  right: 10px;
+  transform: rotate(180deg);
+  font-size: 18px;
+  transition: transform 300ms ease-in-out;
+}
+
+.themes,
+.teams,
+.ranks {
+  flex-grow: 1;
+}
+
+.themes.isActive .dropdownIcon,
+.teams.isActive .dropdownIcon,
+.ranks.isActive .dropdownIcon {
+  transform: none;
+}
+
+.themesList,
+.teamsList,
+.ranksList {
+  margin-bottom: 20px;
+  max-height: 0;
+  opacity: 0;
+  overflow-y: hidden;
+  transition: max-height 300ms ease-in-out, opacity 300ms ease-in-out;
+}
+
+.teams.isActive .teamsList {
+  opacity: 1;
+  max-height: calc(dropdown-height * teams-count + dropdown-padding * 2);
+}
+
+.ranks.isActive .ranksList {
+  opacity: 1;
+  max-height: calc(dropdown-height * ranks-count + dropdown-padding * 2);
+}
+
+.themes.isActive .themesList {
+  opacity: 1;
+  max-height: calc(dropdown-height * theme-count + dropdown-padding * 2);
 }
