--- a/src/styles/modules/member_card.module.css
+++ b/src/styles/modules/member_card.module.css
@@ -92,13 +92,13 @@
   width: 70px;
   height: 70px;
   border-radius: 20px;
-  background-color: hotpink;
 }
 
 .profile img {
   width: 100%;
   height: auto;
   border-radius: 20px;
+  object-fit: cover;
 }
 
 .authName {
