🐛 Fix ghost button hover and member card image sizing

--- a/src/styles/modules/buttons.module.css
+++ b/src/styles/modules/buttons.module.css
@@ -28,9 +28,9 @@
 .ghostBtn {
   color: primary;
   background-color: transparent;
-  transition: color 300ms ease-in-out;
+  transition: opacity 300ms ease-in-out;
 }
 
 .ghostBtn:not(:disabled):hover {
-  color: secondery;
+  opacity: 0.4;
 }
