✏️ Fix secondery → secondary

--- a/src/styles/constants/color.css
+++ b/src/styles/constants/color.css
@@ -1,15 +1,5 @@
 @value primary: #2C3438;
-@value secondery: #959CA0;
-
-@value white: #fff;
-@value black: #000;
-@value background: #F5F4F6;
-
-@value green: #009EB4;
-@value green-active: #028597;
-
-@value primary: #2C3438;
-@value secondery: #959CA0;
+@value secondary: #959CA0;
 
 @value white: #fff;
 @value black: #000;
