--- a/src/styles/modules/buttons.module.css
+++ b/src/styles/modules/buttons.module.css
@@ -1,4 +1,4 @@
-@value primary, secondery, white, green, green-active from '../constants/color.css';
+@value primary, white, green, green-active from '../constants/color.css';
 
 .baseBtn {
   display: flex;
