--- a/src/styles/modules/error_page.module.css
+++ b/src/styles/modules/error_page.module.css
@@ -1,4 +1,4 @@
-@value primary, secondery from '../constants/color.css';
+@value primary from '../constants/color.css';
 
 @value font-size-14, line-height-14, letter-spacing-14, font-size-16, line-height-16, letter-spacing-16, font-size-18,line-height-18,letter-spacing-18 from '../constants/typography.css';
 
