--- a/src/styles/modules/home_page.module.css
+++ b/src/styles/modules/home_page.module.css
@@ -1,4 +1,4 @@
-@value primary, secondery, white, background, green, green-active from '../constants/color.css';
+@value primary, white, background, green, green-active from '../constants/color.css';
 
 @value font-size-12, line-height-12, letter-spacing-12, font-size-14,line-height-14, letter-spacing-14, font-size-16, line-height-16,letter-spacing-16 from '../constants/typography.css';
 
