--- a/src/styles/modules/search_form.module.css
+++ b/src/styles/modules/search_form.module.css
@@ -1,36 +1,28 @@
-@value primary, secondery, white, background, green, green-active from '../constants/color.css';
+@value primary, secondary, white, background, green, green-active from '../constants/color.css';
 
-@value font-size-12, line-height-12, letter-spacing-12, font-size-14,line-height-14, letter-spacing-14, font-size-16, line-height-16,letter-spacing-16 from '../constants/typography.css';
+@value font-size-14,line-height-14, letter-spacing-14, font-size-16, line-height-16,letter-spacing-16 from '../constants/typography.css';
 
 /* NOTE: form header */
 .formHeader {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   margin-bottom: 32px;
 }
 
-.formHideBtn {
-  font-size: 26px;
-  color: primary;
-  transition: color 300ms ease-in-out;
-}
-
 .resetBtn {
-  font-size: font-size-12;
-  line-height: line-height-12;
-  letter-spacing: letter-spacing-12;
+  font-size: font-size-14;
+  line-height: line-height-14;
+  letter-spacing: letter-spacing-14;
   font-weight: 400;
-  color: secondery;
+  color: secondary;
   transition: color 300ms ease-in-out;
 }
 
-.formHideBtn:hover,
 .resetBtn:hover {
   color: green;
 }
 
-.formHideBtn:active,
 .resetBtn:active {
   color: green-active;
 }
@@ -74,5 +66,5 @@ input.formInput {
   font-size: font-size-14;
   line-height: line-height-14;
   letter-spacing: letter-spacing-14;
-  color: secondery;
+  color: secondary;
 }
