--- a/src/styles/modules/common.module.css
+++ b/src/styles/modules/common.module.css
@@ -177,18 +177,33 @@
 }
 
 .mymemuBtn {
+  justify-content: flex-start;
   width: 100%;
   height: 60px;
   border-radius: 4px;
   transition: box-shadow 300ms ease-in-out;
-  color: secondary;
 }
 
-.userIcon {
+.mymemuBtn .userIcon {
   margin-right: 8px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  object-fit: contain;
+}
+
+.mymemuBtn span {
+  font-size: font-size-14;
+  line-height: line-height-14;
+  letter-spacing: letter-spacing-14;
+  color: secondary;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.mymemuBtn span.isActive {
+  color: primary;
 }
 
 .mymemuBtn:hover {
