--- a/src/styles/modules/common.module.css
+++ b/src/styles/modules/common.module.css
@@ -209,3 +209,43 @@
 .mymemuBtn:hover {
   box-shadow: dropdown-shadow;
 }
+
+/* NOTE: Loding spinner */
+
+.lodingBackGround {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
+
+.lodingSmall {
+  margin: 0 0 16px;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  border: 3px solid background;
+  border-top: 3px solid green;
+  animation: spin 2s linear infinite;
+}
+
+.lodingMiddle {
+  width: 50px;
+  height: 50px;
+  border: 6px solid background;
+  border-top: 6px solid green;
+  border-radius: 50%;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
