--- a/src/styles/modules/maker.module.css
+++ b/src/styles/modules/maker.module.css
@@ -1,4 +1,4 @@
-@value white, primary, background, green from '../constants/color.css';
+@value white, primary, background, green, logout from '../constants/color.css';
 
 @value font-size-14, line-height-14, letter-spacing-14, font-size-16,line-height-16,letter-spacing-16 from '../constants/typography.css';
 
@@ -83,24 +83,10 @@ input[type='file'] {
   align-self: center;
 }
 
-.loding {
-  margin: 0 0 16px 16px;
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  border: 3px solid background;
-  border-top: 3px solid green;
-  animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
+.removeBtn {
+  align-self: flex-end;
+  color: logout;
+  height: 44px;
 }
 
 @media screen and (min-width: 768px) {
