--- a/src/styles/modules/dropdown.module.css
+++ b/src/styles/modules/dropdown.module.css
@@ -4,6 +4,28 @@
 
 @value teams-count, ranks-count, theme-count, dropdown-height, dropdown-padding from '../constants/dropdownList.css';
 
+.formLabel {
+  margin-bottom: 12px;
+  font-size: font-size-16;
+  line-height: line-height-16;
+  letter-spacing: letter-spacing-16;
+  color: primary;
+}
+
+.formInput {
+  position: relative;
+  margin-bottom: 4px;
+  width: 100%;
+  height: 30px;
+  background-color: white;
+  font-size: font-size-14;
+  line-height: line-height-14;
+  letter-spacing: letter-spacing-14;
+  font-weight: 400;
+  color: primary;
+  border-radius: 4px;
+}
+
 .dropdownList {
   padding: 8px;
   width: 100%;
