--- a/src/styles/modules/home_page.module.css
+++ b/src/styles/modules/home_page.module.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
+  height: 100%;
   overflow-y: auto;
 }
 
