--- a/src/styles/modules/common.module.css
+++ b/src/styles/modules/common.module.css
@@ -145,7 +145,8 @@
   pointer-events: all;
 }
 
-.toolBtn {
+a.toolBtn,
+button.toolBtn {
   justify-content: flex-start;
   margin: 8px 0;
   padding: 0 12px;
