--- a/src/styles/modules/common.module.css
+++ b/src/styles/modules/common.module.css
@@ -190,7 +190,7 @@ button.mymemuBtn {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .mymemuBtn span {
