--- a/src/styles/modules/team_card.module.css
+++ b/src/styles/modules/team_card.module.css
@@ -1,4 +1,4 @@
-@value primary, secondary, white, background, yellow, blue, login, logout from '../constants/color.css';
+@value primary, secondary, white, light-background, yellow, blue, login, logout from '../constants/color.css';
 
 @value font-size-14,line-height-14, letter-spacing-14, font-size-18, line-height-18,letter-spacing-18 from '../constants/typography.css';
 
@@ -54,7 +54,7 @@
 }
 
 .itemTop.isGray {
-  background-color: background;
+  background-color: light-background;
 }
 
 .itemTop.isYellow {
@@ -71,13 +71,12 @@
   bottom: 0;
   width: 20px;
   height: 20px;
-  background-color: login;
   border: 3px solid white;
   border-radius: 50%;
 }
 
 .dot.online {
-  background-color: online;
+  background-color: login;
 }
 
 .dot.offline {
@@ -93,7 +92,6 @@
   line-height: line-height-18;
   letter-spacing: letter-spacing-18;
   color: primary;
-  font-weight: 400;
 }
 
 .userTeam,
@@ -129,12 +127,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
     font-size: 24px;
-    font-weight: 400;
+    width: 48px;
+    height: 48px;
     color: secondary;
+    border-radius: 4px;
     transform: translateY(-50%);
-    transition: color 300ms ease-in-out;
+    transition: color 300ms ease-in-out, background-color 300ms ease-in-out;
   }
 
   .moveBtn.prevBtn {
@@ -147,6 +146,7 @@
 
   .moveBtn:hover {
     color: primary;
+    background-color: #f5f5f5c7;
   }
 
   .teamItem {
