--- a/src/styles/modules/common.module.css
+++ b/src/styles/modules/common.module.css
@@ -1,4 +1,5 @@
 @value overlay-black, primary, secondary, white, logout, background,  green, green-active  from '../constants/color.css';
+
 @value overlay-level, auth-popup-level from '../constants/z-index.css';
 
 @value font-size-14,line-height-14,letter-spacing-14, font-size-16,line-height-16,letter-spacing-16, font-size-24, line-height-24, letter-spacing-24 from '../constants/typography.css';
@@ -120,13 +121,6 @@
 }
 
 /* NOTE: MyMenu */
-.myMenu {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-}
-
 .myMenuList {
   width: 100%;
   max-height: 0;
@@ -139,7 +133,7 @@
 }
 
 .myMenu.isActive .myMenuList {
-  max-height: 168px;
+  max-height: 198px;
   padding: 8px;
   opacity: 1;
   pointer-events: all;
@@ -147,23 +141,20 @@
 
 a.toolBtn,
 button.toolBtn {
-  justify-content: flex-start;
   margin: 8px 0;
   padding: 0 12px;
   width: 100%;
-  height: 40px;
+  height: 50px;
   font-size: font-size-14;
   line-height: line-height-14;
   letter-spacing: letter-spacing-14;
   color: primary;
-  border-radius: 4px;
-  transition: background-color 300ms ease-in-out, box-shadow 300ms ease-in-out,
-    color 300ms ease-in-out;
+  border-radius: 22px;
+  transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
 }
 
 .toolBtn:hover,
 .toolBtn:active {
-  background-color: background;
   color: green;
   box-shadow: dropdown-shadow;
 }
@@ -174,19 +165,18 @@ button.toolBtn {
 }
 
 .toolIcon {
-  margin-right: 12px;
+  width: 24px;
+  height: 24px;
 }
 
 button.mymemuBtn {
-  justify-content: flex-start;
   width: 100%;
   height: 60px;
-  border-radius: 4px;
+  border-radius: 22px;
   transition: box-shadow 300ms ease-in-out;
 }
 
 .mymemuBtn .userIcon {
-  margin-right: 8px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -194,9 +184,9 @@ button.mymemuBtn {
 }
 
 .mymemuBtn span {
-  font-size: font-size-14;
-  line-height: line-height-14;
-  letter-spacing: letter-spacing-14;
+  font-size: font-size-16;
+  line-height: line-height-16;
+  letter-spacing: letter-spacing-16;
   color: secondary;
   overflow: hidden;
   white-space: nowrap;
@@ -211,8 +201,34 @@ button.mymemuBtn {
   box-shadow: dropdown-shadow;
 }
 
-/* NOTE: Loding spinner */
+@media screen and (min-width: 1200px) {
+  a.toolBtn,
+  button.toolBtn,
+  button.mymemuBtn {
+    justify-content: flex-start;
+    padding: 0 12px;
+    border-radius: 4px;
+  }
 
+  .mymemuBtn .userIcon {
+    margin-right: 8px;
+  }
+
+  .toolIcon {
+    margin-right: 12px;
+  }
+
+  .toolBtn:hover {
+    background-color: background;
+    box-shadow: dropdown-shadow;
+  }
+
+  .toolBtn:not(.logoutBtn):hover {
+    color: green;
+  }
+}
+
+/* NOTE: Loding spinner */
 .lodingBackGround {
   display: flex;
   align-items: center;
