🐛 Fix img revert style

--- a/src/styles/modules/markdown.module.css
+++ b/src/styles/modules/markdown.module.css
@@ -7,6 +7,12 @@
   color: primary;
 }
 
+.renderer img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .renderer ul,
 .renderer ol {
   padding-left: revert;
