--- a/src/styles/modules/home_page.module.css
+++ b/src/styles/modules/home_page.module.css
@@ -1,6 +1,6 @@
-@value primary, white, background, green, green-active from '../constants/color.css';
+@value primary, white, background, green from '../constants/color.css';
 
-@value font-size-12, line-height-12, letter-spacing-12, font-size-14,line-height-14, letter-spacing-14, font-size-16, line-height-16,letter-spacing-16 from '../constants/typography.css';
+@value font-size-14,line-height-14, letter-spacing-14, font-size-16, line-height-16,letter-spacing-16 from '../constants/typography.css';
 
 .articleWrap {
   display: flex;
@@ -21,12 +21,12 @@
 }
 
 .benner {
+  flex: 3;
   width: 60%;
-  height: 550px;
 }
 
 .todo {
-  width: 30%;
+  flex: 1;
 }
 
 .member {
@@ -39,4 +39,49 @@
   line-height: line-height-16;
   letter-spacing: letter-spacing-16;
   color: primary;
+}
+
+/* TODO: 나중애 CSS 결합하기 */
+.workList {
+  height: 500px;
+  overflow-y: scroll;
+}
+
+.workList::-webkit-scrollbar {
+  display: none;
+}
+
+.workItem a {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 8px 0;
+  padding: 0 8px;
+  width: 100%;
+  height: 50px;
+  font-size: font-size-16;
+  line-height: line-height-16;
+  letter-spacing: letter-spacing-16;
+  color: primary;
+  border: 1px solid #f5f5f5;
+  border-radius: 8px;
+  transition: background-color 300ms ease-in-out, color 300ms ease-in-out;
+}
+
+.workItem a:hover {
+  background-color: green;
+  color: white;
+}
+
+.workItem a.lsitNone {
+  justify-content: center;
+}
+
+.lsitNone {
+  margin-top: 12px;
+  font-size: font-size-14;
+  line-height: line-height-14;
+  letter-spacing: letter-spacing-14;
+  color: primary;
+  text-align: center;
 }
