🚧 Implement carousel component

--- a/src/styles/modules/home_page.module.css
+++ b/src/styles/modules/home_page.module.css
@@ -5,7 +5,7 @@
 .articleWrap {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   height: 100%;
   overflow-y: auto;
 }
@@ -18,15 +18,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-bottom: 36px;
 }
 
 .benner {
-  flex: 3;
-  width: 60%;
-}
-
-.todo {
-  flex: 1;
+  width: 100%;
 }
 
 .member {
@@ -41,9 +37,20 @@
   color: primary;
 }
 
+@media screen and (min-width: 768px) {
+  .benner {
+    width: 60%;
+  }
+
+  .todo {
+    width: 40%;
+    padding: 0 10px;
+  }
+}
+
 /* TODO: 나중애 CSS 결합하기 */
 .workList {
-  height: 500px;
+  height: 340px;
   overflow-y: scroll;
 }
 
@@ -75,13 +82,21 @@
 
 .workItem a.lsitNone {
   justify-content: center;
+  width: 180px;
+  margin: 0 auto;
 }
 
 .lsitNone {
-  margin-top: 12px;
+  margin: 12px 0;
   font-size: font-size-14;
   line-height: line-height-14;
   letter-spacing: letter-spacing-14;
   color: primary;
   text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .workList {
+    height: 500px;
+  }
 }
