--- a/src/styles/bases/global.css
+++ b/src/styles/bases/global.css
@@ -51,3 +51,39 @@
     display: none !important;
   }
 }
+
+/* NOTE: slide carousel */
+.carousel {
+  margin: 0 -15px;
+}
+
+.slick-dots {
+  bottom: 0;
+  background-color: #fff;
+}
+
+.slick-dots li button:hover:before {
+  color: #009eb4;
+}
+
+.slick-dots li button:focus:before {
+  opacity: 0.25;
+}
+
+.slick-dots li.slick-active button:before {
+  opacity: 1;
+  color: #009eb4;
+  font-size: 14px;
+}
+
+.slick-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .carousel {
+    margin: 0;
+  }
+}
