--- a/src/styles/modules/markdown.module.css
+++ b/src/styles/modules/markdown.module.css
@@ -31,6 +31,8 @@
   width: 100%;
   border: 1px solid secondary;
   border-collapse: collapse;
+  table-layout: fixed;
+  word-wrap: break-word;
 }
 
 .renderer th,
@@ -54,4 +56,5 @@
   background-color: #f5f5f5;
   padding: 12px;
   border-radius: 4px;
+  white-space: break-spaces;
 }
