--- a/src/styles/bases/global.css
+++ b/src/styles/bases/global.css
@@ -77,9 +77,8 @@
 }
 
 .slick-slide img {
-  display: block;
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 @media screen and (min-width: 768px) {
