--- a/src/styles/bases/reset.css
+++ b/src/styles/bases/reset.css
@@ -10,6 +10,10 @@ html {
   font-family: 'DM Sans', sans-serif;
 }
 
+html::-webkit-scrollbar {
+  display: none;
+}
+
 body {
   font-family: 'DM Sans', sans-serif;
 }
