--- a/src/styles/layouts/grids.css
+++ b/src/styles/layouts/grids.css
@@ -1,3 +1,12 @@
+.main-content {
+  overflow-y: auto;
+  margin: 20px 0 80px;
+}
+
+.main-content::-webkit-scrollbar {
+  display: none;
+}
+
 .container {
   width: 100%;
   padding: 0 5px;
@@ -30,6 +39,11 @@
 }
 
 @media screen and (min-width: 768px) {
+  .main-content {
+    overflow-y: auto;
+    margin: 0;
+  }
+
   .container {
     max-width: 1020px;
     padding: 0 30px;
@@ -71,10 +85,10 @@
     width: 100%;
   }
 
-  .wrapper {
+  /* .wrapper {
     padding: 24px 0;
     height: 100vh;
-  }
+  } */
 }
 
 @media screen and (min-width: 1200px) {
