--- a/src/styles/modules/global_header.module.css
+++ b/src/styles/modules/global_header.module.css
@@ -9,8 +9,8 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  height: 100%;
-  padding: 0 14px;
+  padding: 24px 0;
+  height: 100vh;
   background-color: white;
   z-index: snb-level;
 }
@@ -21,7 +21,7 @@
   justify-content: flex-start;
 }
 
-.navWrap {
+.navGroup {
   width: 100%;
 }
 
@@ -71,7 +71,7 @@
 
 .footer {
   position: absolute;
-  bottom: 0;
+  bottom: 24px;
   left: 0;
   width: 100%;
   padding: 0 14px;
