--- a/src/styles/modules/search.module.css
+++ b/src/styles/modules/search.module.css
@@ -2,13 +2,13 @@
 
 @value font-size-16,line-height-16, letter-spacing-16 from '../constants/typography.css';
 
-.memberListWrap {
+.memberGroup {
   position: relative;
   height: 100%;
   overflow-y: auto;
 }
 
-.memberListWrap::-webkit-scrollbar {
+.memberGroup::-webkit-scrollbar {
   display: none;
 }
 
@@ -16,6 +16,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  margin-bottom: 12px;
 }
 
 .serchInput {
@@ -49,4 +50,11 @@
   line-height: line-height-16;
   letter-spacing: letter-spacing-16;
   color: primary;
+}
+
+@media screen and (min-width: 768px) {
+  .memberGroup {
+    height: 100vh;
+    padding: 24px 0;
+  }
 }
