--- a/src/styles/modules/work.module.css
+++ b/src/styles/modules/work.module.css
@@ -1,18 +1,17 @@
 @value primary, secondary, white, light-background, background, green from '../constants/color.css';
 
-@value font-size-14, line-height-14, letter-spacing-14, font-size-16, line-height-16, letter-spacing-16 from '../constants/typography.css';
+@value font-size-14, line-height-14, letter-spacing-14, font-size-16, line-height-16, letter-spacing-16, font-size-24, line-height-24, letter-spacing-24  from '../constants/typography.css';
 
-.workWrapper {
-  position: relative;
+.workGroup {
   height: 100%;
   overflow-y: auto;
 }
 
-.workWrapper::-webkit-scrollbar {
+.workGroup::-webkit-scrollbar {
   display: none;
 }
 
-.workWrapper .header {
+.workGroup .header {
   position: relative;
   display: flex;
   justify-content: space-between;
@@ -21,6 +20,9 @@
 
 .header h1 {
   color: primary;
+  font-size: font-size-16;
+  line-height: line-height-16;
+  letter-spacing: letter-spacing-16;
 }
 
 .openBtn svg {
@@ -32,14 +34,14 @@
 
 .toolTip {
   position: absolute;
-  top: 26px;
+  top: 12px;
   right: 58px;
   padding: 2px 10px;
-  background-color: green;
+  background-color: light-background;
   font-size: font-size-14;
   line-height: line-height-14;
   letter-spacing: letter-spacing-14;
-  color: white;
+  color: primary;
   font-weight: 700;
   border-radius: 6px;
 }
@@ -51,7 +53,7 @@
   margin-left: -8px;
   border-width: 8px;
   border-style: solid;
-  border-color: transparent transparent transparent green;
+  border-color: transparent transparent transparent light-background;
   content: '';
 }
 
@@ -131,4 +133,22 @@
 
 .preview {
   margin-top: 24px;
+}
+
+@media screen and (min-width: 768px) {
+  .workGroup {
+    height: 100vh;
+    padding: 24px 0;
+  }
+
+  .header h1 {
+    color: primary;
+    font-size: font-size-24;
+    line-height: line-height-24;
+    letter-spacing: letter-spacing-24;
+  }
+
+  .toolTip {
+    top: 20px;
+  }
 }
